add TrainingController
